# rack_adaptive_dropoff

./: CMakeLists.txt  README.md  package.xml
cfg/: purePursuitReconfig.cfg  quinticPlannerReconfig.cfg
include/: adaptive_docking_local_planner.h  adaptive_dropoff_local_planner.h  docking_control.h  docking_control_node.h  docking_planner.h  docking_planner_node.h  filters.h  fuzzy_control.h  pure_pursuit_control.h  quintic_planner.h  sliding_mode_steering_control.h  utils.h
include/controller/: pure_pursuit_control.h
launch/: adaptive_docking_node.launch  adaptive_dropoff_node.launch  docking_control.launch  docking_planner.launch  visualize.launch
rviz/: adaptive_dropoff.rviz  forklift_sim.rviz  simulator.rviz
src/: adaptive_docking_local_planner.cpp  adaptive_docking_node.cpp  adaptive_dropoff_local_planner.cpp  adaptive_dropoff_node.cpp  docking_control.cpp  docking_control_node.cpp  docking_planner.cpp  docking_planner_node.cpp  filters.cpp  fuzzy_control.cpp  pure_pursuit_control.cpp  quintic_planner.cpp  sliding_mode_steering_control.cpp  utils.cpp
src/controller/: fuzzy_control.cpp  pure_pursuit_control.cpp
